<resources>
    <string name="app_name">GreenHouse</string>
    <string name="greenhouse_2_name">Minas Gerais</string>
    <string name="greenhouse_1_name">Tropical</string>
    <string name="inventory">Inventory</string>
    <string name="add_orchid">Add Orchid</string>
    <string name="title_activity_insert_orchid">InsertOrchidActivity</string>

    <!--Strings for Columns Label-->
    <string name="genus">Genus</string>
    <string name="species">Species</string>
    <string name="greenhouse">Greenhouse</string>
    <string name="is_alive">Is Alive?</string>
    <string name="date">Date added</string>

    <string name="alert_dialog_title">Please Select</string>
    <string name="positive_button_text">Select</string>
    <string name="negative_button_text">Cancel</string>

</resources>
