<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme"
    android:orientation="vertical"
    android:background="@color/colorBackgroundGray">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/textGenus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/genus" />

        <EditText
            android:id="@+id/insert_orchid_genus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:hint="Insert genus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/textSpecies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/species" />

        <EditText
            android:id="@+id/insert_orchid_species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:hint="Insert species" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/textGreenhouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greenhouse" />

        <EditText
            android:id="@+id/insert_orchid_greenhouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:hint="Insert greenhouse" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/textIsAlive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/is_alive" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/insert_orchid_radio_yes"
                android:text="Yes"
                android:checked="true"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/insert_orchid_radio_no"
                android:text="No"
                android:checked="false"
                android:layout_weight="1"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:id="@+id/date_test">

        <TextView
            android:id="@+id/textDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <EditText
            android:id="@+id/insert_orchid_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
            android:hint="Insert date" />

    </LinearLayout>



</LinearLayout>
